--- a/.env
+++ b/.env
@@ -10,6 +10,7 @@ DB_PASS='ecen404$592H#!cx'
 DB_NAME=lusher engineering parts database
 DB_HOST=ssh_tunnel
 DB_PORT=3306
+LOCAL_PORT=3307
 
 # SSH CONFIG
 SSH_HOST=lusherengineeringservices.com
